[tool.poetry]
name = "fencex"
version = "0.1.0-alpha"
description = "FenceX"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.48.0"
uvicorn = "^0.11.2"
gunicorn = "^20.0.4"
gino = "^0.8.5"
alembic = "^1.3"
psycopg2-binary = "^2.8"
itsdangerous = "^1.1.0"
importlib_metadata = { version = "^1.5.0", python = "<3.8" }
authlib = "^0.14.1"
httpx = "^0.11.1"
passlib = "^1.7.2"
python-multipart = "^0.0.5"
argon2_cffi = "^19.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
requests = "^2.22"

[tool.poetry.plugins."fencex.modules"]
"ras" = "fencex.idps.ras"
"user" = "fencex.user"
"duri" = "fencex.duri"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
